--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <main>
 
       <!-- first screen -->
-      <div class="call-to-action visible-lg">
+      <div class="call-to-action">
         <div class="video-wrap  text-center">
           <div class="container ">
             <div class="row">
@@ -66,9 +66,11 @@
                   <div class="col-md-12 text-right">
                    
                     <div class="btn-wrap ">
+
                       <a href="#" class="btn red-bg vertical-align">
                         <span>получить деньги</span>
                       </a>
+                      <a href="#" class="btn blue-bg visible-xs visible-sm">получить ссылку</a>
                     </div>
                     
                     <a href="" class="play-video-btn" data-toggle="modal" data-target=".videoModal"></a>
@@ -88,8 +90,8 @@
         <div class="form-block grey-bg navbar-fixed-bottom">
           <div class="container">
             <div class="row">
-              <div class="col-sm-4">
-                <ul class="app-store-link">
+              <div class="col-xs-12 col-md-4">
+                <ul class="app-store-link text-center">
                   <li>
                     <a href="#">
                       <img src="img/app-store.png" alt="">
@@ -102,8 +104,8 @@
                   </li>
                 </ul>
               </div>
-              <div class="col-sm-8">
-                <form action="" class="pull-right">
+              <div class="col-sm-8 hidden-sm hidden-xs">
+                <form action="" class="pull-right ">
                   <input type="text" name="phone" id="phone" placeholder="+38 0">
                   <button type="submit" class="btn blue-bg" data-toggle="modal" data-target=".thanks-modal">получить ссылку на приложение</button>
                 </form>
@@ -185,13 +187,13 @@
         <div class="container">
           <div class="advantage">
             <div class="row">
-              <div class="col-sm-6">
+              <div class="col-xs-7 col-sm-6">
                 <div class="advantage-text">
                   <h4>простое получение по QR коду</h4>
                   <p>Легко получайте деньги на любой счет <br>с помощью QR кода.</p>
                 </div>
               </div>
-              <div class="col-sm-6">
+              <div class="col-xs-5 col-sm-6">
                 <div class="advantage-img text-center">
                   <img src="img/advantages/advanteges-img-1.jpg" alt="">
                 </div>
@@ -200,12 +202,12 @@
           </div>
           <div class="advantage">
             <div class="row">
-              <div class="col-sm-6">
+              <div class="col-xs-5 col-sm-6">
                 <div class="advantage-img text-center">
                   <img src="img/advantages/advanteges-img-2.jpg" alt="">
                 </div>
               </div>
-              <div class="col-sm-6">
+              <div class="col-xs-7 col-sm-6">
                 <div class="advantage-text">
                   <h4>простая оплата по QR коду</h4>
                   <p>Легко получайте деньги на любой счет <br>с помощью QR кода.</p>
@@ -216,7 +218,7 @@
           </div>
           <div class="advantage">
             <div class="row">
-              <div class="col-sm-6">
+              <div class="col-xs-7 col-sm-6">
                 <div class="advantage-text">
                   <h4>продажа по разовому QR коду</h4>
                   <span>для мерчанта</span>
@@ -224,7 +226,7 @@
                   <a href="#" class="btn blue-border">узнать больше</a>
                 </div>
               </div>
-              <div class="col-sm-6">
+              <div class="col-xs-5 col-sm-6">
                 <div class="advantage-img text-center">
                   <img src="img/advantages/advanteges-img-3.jpg" alt="">
                 </div>
@@ -233,12 +235,12 @@
           </div>
           <div class="advantage m-0 border-none">
             <div class="row">
-              <div class="col-sm-6">
+              <div class="col-xs-5 col-sm-6">
                 <div class="advantage-img text-center">
                   <img src="img/advantages/advanteges-img-4.jpg" alt="">
                 </div>
               </div>
-              <div class="col-sm-6">
+              <div class="col-xs-7 col-sm-6">
                 <div class="advantage-text">
                   <h5>продажа по статическому QR коду</h5>
                   <span>для мерчанта</span>
@@ -315,7 +317,7 @@
     <footer class="darck-grey-bg">
       <div class="container">
         <div class="rov">
-          <div class="col-sm-9">
+          <div class="col-xs-12 col-sm-9">
             <ul class="footer-nav">
               <li><a href="#">мерчантам</a></li>
               <li><a href="#">блог</a></li>
@@ -327,7 +329,7 @@
             </ul>
             <span>2016 © City World Group LLC. tachcard ™</span>
           </div>
-          <div class="col-sm-3">
+          <div class="col-xs-12 col-sm-3">
             <ul class="paymet-type">
               <li class="master-card"></li>
               <li class="visa"></li>
