final fix bag video in mozila

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                       <!-- <a href="#" class="btn blue-bg visible-xs visible-sm">получить ссылку</a> -->
                     </div>
                     
-                    <a href="" class="play-video-btn" data-toggle="modal" data-target=".videoModal" onclick="play()"></a>
+                    <a href="#" class="play-video-btn" data-toggle="modal" data-target=".videoModal"></a>
                     <ul class="download-list">
                       <li><a href="https://www.dropbox.com/s/p54lt6pmigzzwpz/tc%20-%20product.pdf" class="download-icon" target="_blank"></a></li>
                       <li><a href="https://www.facebook.com/tachcard/" class="fb" target="_blank"></a></li>
@@ -356,10 +356,10 @@
 
     <!-- VIDEO MODAL START -->
     
-    <div class="modal fade bs-example-modal-lg videoModal" tabindex="-1" role="dialog" onclick="pause()">
+    <div class="modal fade bs-example-modal-lg videoModal" tabindex="-1" role="dialog">
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-header"> 
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="pause()">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span></span>
             <span></span>
           </button>
@@ -385,7 +385,7 @@
     <!-- THANKS MODAL END -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script async src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script async src="js/bootstrap.min.js"></script>
     <script async src="http://www.youtube.com/iframe_api"></script>
